--- a/app/assets/stylesheets/pad.css.scss
+++ b/app/assets/stylesheets/pad.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the pad controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body, html{
+  padding: 0px;
+  margin: 0px;
+}
+
+textarea{
+  position: absolute;
+  padding: 20px;
+  top: 0px;
+  left: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  box-sizing: border-box;
+}
