--- a/app/views/pad/show.html.erb
+++ b/app/views/pad/show.html.erb
@@ -1,5 +1,9 @@
 <%= form_for @pad do |p|%>
 <%= p.hidden_field(:name, value: params[:name]) %>
-<%= p.text_area(:content) %>
+<%= p.text_area(:content, class: 'pad_text') %>
 <%= p.submit %>
 <% end %>
+
+<div id="mark_down">
+  <%= raw Markdown.new(@pad.content).to_html unless @pad.content.nil?%>
+</div>
