--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,47 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'compass/css3';
+
+
+#root {
+  font-family: 'Lobster', cursive;
+  font-size: 30px;
+  text-align: center;
+  width: 100%;
+  color: #323131;
+  
+  h1{
+    font-size: 40px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    margin-top: 30px;
+  }
+
+  form {
+    input[type="submit"]{
+      display: block;
+      font-family: 'Lobster', cursive;
+      text-align: center;
+      margin: auto;
+      font-size: 30px;
+      background: #323131;
+      color: #fff;
+      margin-top: 30px;
+      border: 0px;
+      padding: 5px 15px;
+      @include border-radius(10px);
+    }
+    input[type="text"] {
+      font-size: 30px;
+      color: #323131;
+      border:0px;
+      border-bottom: 1px dashed #323131;
+      outline: none;
+      margin-bottom: 10px;
+      margin-top: 30px;
+
+    }
+  }
+}
